vps_oracle/k3s/apps/dify/k8s/worker-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-beat
  namespace: dify
  labels:
    app: worker-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-beat
  template:
    metadata:
      labels:
        app: worker-beat
    spec:
      enableServiceLinks: false
      containers:
        - name: worker-beat
          image: langgenius/dify-api:1.14.2@sha256:062815df8ed6fcf82285e55f3cb5586241b2828e6695a3fb8114bfb99b5e8517
          resources:
            requests:
              cpu: 50m
              memory: 320Mi
            limits:
              cpu: 350m
              memory: 640Mi
