vps_oracle/k3s/apps/dify/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: dify
  labels:
    app: worker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      enableServiceLinks: false
      containers:
        - name: worker
          image: langgenius/dify-api:1.14.2@sha256:062815df8ed6fcf82285e55f3cb5586241b2828e6695a3fb8114bfb99b5e8517
          volumeMounts:
            - name: storage
              mountPath: /app/api/storage
          resources:
            requests:
              cpu: 25m
              memory: 384Mi
            limits:
              cpu: 450m
              memory: 768Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
