vps_oracle/k3s/apps/dify/k8s/plugin-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-daemon
  namespace: dify
  labels:
    app: plugin-daemon
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plugin-daemon
  template:
    metadata:
      labels:
        app: plugin-daemon
    spec:
      enableServiceLinks: false
      containers:
        - name: plugin-daemon
          image: langgenius/dify-plugin-daemon:0.6.1-local@sha256:fa7ad45e1b2a777cd243b902609abecb4fd924adcd13d21ef4258b5090a09be5
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: storage
              mountPath: /app/storage
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: plugin-daemon
---
apiVersion: v1
kind: Service
metadata:
  name: plugin-daemon
  namespace: dify
spec:
  type: NodePort
  selector:
    app: plugin-daemon
  ports:
    - port: 5002
      targetPort: 5002
      nodePort: 30088
