vps_oracle/k3s/apps/dify/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: dify
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      enableServiceLinks: false
      containers:
        - name: web
          image: langgenius/dify-web:1.14.2@sha256:db73434e185ac778f31f4cc1adcce0dbe84b41a95ea5af58216acf095eed5f67
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 350m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: dify
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30086
